# vectorwrapper

./: .travis.yml  README.md
gdb/: vectorwrapper.py
include/: vectorwrapper-1.0
include/vectorwrapper/: has_method.hpp  sequence_bt.hpp  sequence_range.hpp  size_type.hpp  vector_cast.hpp  vector_iterator.hpp  vector_ostream.hpp  vectorops.hpp  vectorwrapper.hpp  vectorwrapper.inl  vectorwrapper_simd.hpp  vectorwrapper_simd.inl
samples/: CMakeLists.txt  dummy_functions.cpp  dummy_functions.hpp  main.cpp  one_way_conversion.cpp  one_way_conversion.hpp  vec.hpp
test/: CMakeLists.txt
test/speed/: CMakeLists.txt  speed.cpp
test/unit/: CMakeLists.txt  example.cpp  sample_vectors.hpp  test_conversions.cpp  test_get_at.cpp  test_operators.cpp  test_ops.cpp  test_sequence_range.cpp  test_vector_iterator.cpp
test/unit_noconv/: CMakeLists.txt  sample_vector.hpp  test_conversions.cpp
